Tuned the JVM according to an article