@@ -32,15 +32,23 @@ if test ${java_version} -lt 10; then
     OPTS="${OPTS} -d64"
 fi
 
+# Please refer to https://aikar.co/2018/07/02/tuning-the-jvm-g1gc-garbage-collector-flags-for-minecraft/
 java -server \
     -Xmx${MEMORY_MAX} \
     -Xms${MEMORY_START} \
     -Djline.terminal=jline.UnsupportedTerminal \
     -XX:+UseG1GC \
+    -XX:+UnlockExperimentalVMOptions \
     -XX:MaxGCPauseMillis=100 \
+    -XX:+DisableExplicitGC \
+    -XX:TargetSurvivorRatio=90 \
+    -XX:G1NewSizePercent=50 \
+    -XX:G1MaxNewSizePercent=80 \
+    -XX:G1MixedGCLiveThresholdPercent=35 \
+    -XX:+AlwaysPreTouch \
+    -XX:+ParallelRefProcEnabled \
+    -Dusing.aikars.flags=mcflags.emc.gs \
     -Djava.awt.headless=true \
-    -XX:ParallelGCThreads=2 \
-    -XX:+AggressiveOpts \
     ${OPTS} \
     -jar "${JAR_FILE}" \
     nogui
